--- a/server/package.json
+++ b/server/package.json
@@ -23,5 +23,8 @@
     "multer": "^1.4.5-lts.1",
     "os": "^0.1.2",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
